[tool.poetry]
name = "src"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.1"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
psycopg = "^3.1.12"
psycopg-pool = "^3.1.8"
biopython = "^1.81"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dev = "src.server:poetry_run_dev"
